# whatsapp-cloud-api-rs

./: Cargo.toml  README.md
src/: error.rs  lib.rs  whatspapp_client.rs
src/models/: common.rs  freshchat_message_request.rs  freshchat_message_response.rs  freshchat_message_template.rs  message.rs  mod.rs  template.rs
tests/: send_message_tests.rs
