[package]
name = "landeed-whatsapp-cloud-api"
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Landeed Fork of Whatsapp Cloud API Rust Client"
homepage = "https://github.com/Landeed/whatsapp-cloud-api-rs"
repository = "https://github.com/Landeed/whatsapp-cloud-api-rs"
readme = "README.md"
keywords = ["whatsapp"]
categories = ["api-bindings"]

[dependencies]
log = "0.4.17"
reqwest = { version = "0.11.14", features = ["json"]}
serde = { version = "1.0.152", features = ["derive"]}
serde_json = "1.0.91"
url = "2.5.0"

[dev-dependencies]
dotenv = "0.15.0"
env_logger = "0.10.0"
tokio = { version = "1.24.2", features=["full"]}
